# foot_grasping_discrete_sensors

./: platformio.ini
DiscreteSensors/lib/DiscreteSensors/src/: Button_Sensor.cpp  Definition_pins.h  Definitions.h
DiscreteSensors/lib/LP_Filter/src/: LP_Filter.cpp  LP_Filter.h
DiscreteSensors/lib/ros_lib/custom_msgs/: FeetOutputMsg.h
DiscreteSensors/lib/ros_lib/custom_msgs_gripper/: SharedGraspingMsg.h
DiscreteSensors/ros/foot_grasping/: CMakeLists.txt  package.xml
DiscreteSensors/src/: aux.cpp  main.cpp
DiscreteSensors/src/etc/: main_copy.cpp.org
FSRFootGrasping/src/: main.cpp
Foot_Grasping_Discrete_Sensors/lib/DiscreteSensors/src/: FSR_Sensor.h
Foot_Grasping_Discrete_Sensors/lib/ros_lib/custom_msgs/: FootHapticDataMsg.h  setControllerSrv.h  setStateSrv.h
Foot_Grasping_Discrete_Sensors/lib/ros_lib/rokubimini_msgs/: FirmwareUpdateSerial.h
Foot_Grasping_Discrete_Sensors/ros/foot_grasping/config/: params_fsr.yaml
MicroFootGrasping/: platformio.ini
MicroFootGrasping/lib/ros_lib/custom_msgs/: FootOutputMsg.h  SurgicalTaskStateMsg.h
MicroFootGrasping/lib/ros_lib/custom_msgs_gripper/: GraspingAssistanceMsg.h  GripperInputMsg.h  GripperOutputMsg.h  GripperSetStateSrv.h
MicroFootGrasping/lib/ros_lib/moveit_msgs/: GetCartesianPath.h  GetStateValidity.h
MicroFootGrasping/lib/ros_lib/phidgets_msgs/: EncoderDecimatedSpeed.h  SetAnalogOutput.h  SetDigitalOutput.h
MicroFootGrasping/lib/ros_lib/rokubimini_msgs/: FirmwareUpdateEthercat.h  GetSensorConfiguration.h  Reading.h  SetSensorConfiguration.h
MicroFootGrasping/lib/ros_lib/surgical_task/: RobotStateMsg.h  (+2 more)
MicroFootGrasping/ros/launch/: grasping_hw.launch
MicroFootGrasping/src/: main.cpp
Microswitch/lib/Microswitch_src/: Definition_pins.h
Microswitch/src/: main.cpp
include/: aux.h  utils_functions.h
lib/DiscreteSensors/src/: Button_Sensor.cpp  Button_Sensor.h  FSR_Sensor.cpp  FSR_Sensor.h
lib/ros_lib/custom_msgs/: FootInputMsg.h  TwoFeetOneToolMsg.h
lib/ros_lib/rokubimini_msgs/: ResetWrench.h
lib/ros_lib/surgical_system_service_manager/: ActorAction.h
ros/foot_grasping/config/: params_fsr.yaml
src/: aux.cpp  main.cpp  utils_functions.cpp
(+2 files in other folders)
