<?xml version="1.0"?>
<package>
  <name>foot_grasping</name>
  <version>1.0.0</version>
  <description>the foot_grasping package</description>
  <maintainer email="sarah.bonaly@epfl.ch">jacob</maintainer>
  
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>utils_math</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>custom_msgs_gripper</build_depend>
  <build_depend>custom_msgs</build_depend>
  <build_depend>surgical_task</build_depend>
  <build_depend>surgical_system_service_manager</build_depend>
  

  <run_depend>roscpp</run_depend>
  
  <run_depend>utils_math</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>custom_msgs_gripper</run_depend>  
  <run_depend>custom_msgs</run_depend>
  <run_depend>surgical_task</run_depend>
  <run_depend>surgical_system_service_manager</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>

